# discord-bot-one

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  README.md  bot.py  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: test.yml
bot/: bot.py  config.py
bot/cogs/: crm.py  email_monitor.py  example_cog.py  kimai.py
bot/utils/: crm_cache.py  data_store.py  espo_api_client.py  healthcheck.py  kimai_api_client.py  role_decorators.py
scripts/: check-all.sh  format.sh  lint.sh  mypy.sh  test.sh
tests/: conftest.py
tests/integration/: test_email_monitor.py
tests/unit/: test_bot.py  test_config.py  test_crm.py  test_crm_data_adapter.py  test_data_store.py  test_example_feature.py  test_healthcheck.py  test_kimai.py  test_kimai_api_client.py  test_role_decorators.py
