[project]
name = "discord-bot-one"
version = "0.1.0"
description = "Discord bot for email monitoring"
requires-python = ">=3.8"
dependencies = [
    "discord.py~=2.6.0",
    "pydantic~=2.10",
    "pydantic-settings~=2.8",
]

[tool.uv]
dev-dependencies = [
    "pytest~=8.3",
    "pytest-asyncio~=0.24.0",
    "pytest-mock~=3.14",
    "coverage~=7.6",
    "ruff~=0.14.0",
    "mypy~=1.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--tb=short --strict-markers"

[tool.coverage.run]
source = ["bot"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]